Updated Alumni page

--- a/alumni.html
+++ b/alumni.html
@@ -124,6 +124,258 @@
     <main class="wrapper">
         <div class="container">
             <div class="card__collection clear-fix">
+                <h1 class="mt-5 alumni-heading">2021</h1>
+                <div class="row">
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Abhishek Kohlish (1).webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Abhishek Kolish</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/the.troublemaker.kolish/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100010336743421" target="_blank"
+                                        class="facebook"><i class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/abhishek-kolish-74818014a/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Adityanath suman.jpg" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Adityanath Suman</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/adityanathsuman/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/adityanath.suman" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/aditya-nath-suman-990794148/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Akshat Gupta.jpg" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Akshat Gupta</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/optimist_primee/" target="_blank" class="instagram"><i
+                                            class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/akshat1947" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/akshat-gupta-6a683412b" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/AshishJoshi (1).webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Ashish Joshi</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/shady_ajx/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/joshiashish883" target="_blank"
+                                        class="facebook"><i class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/joshiashish883/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Deepak Kamath.jpg" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Deepak Kamat</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.facebook.com/deepak.kamat.7127" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/deepak-kamat-a67792148/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Diksha Rana.jpg" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Diksha Rana</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/diksha.rana.51/?hl=en" target="_blank" class="instagram"><i
+                                            class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/diksha.rana.7965692/" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/diksharana/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Sambhar.jpg" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Abhimanyu Sambhar</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/_sambhar_saab/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100006309397970" target="_blank"
+                                        class="facebook"><i class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/mwlite/in/abhimanyu-570679160" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/db.webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Divyanshu Bhaik</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/d_bhaik/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/Darker.Divyanshu" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/divyanshu-bhaik-7438a6155/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/hiteshMonga.webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Hitesh Chander Monga</p>
+                            <ul class="cards__list">
+                                <li><a href="https://instagram.com/hitesh._.monga?igshid=z98ab5v4r99s" target="_blank" class="instagram"><i
+                                            class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/hitesh.monga.393" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/hitesh-chander-monga/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/hritikSir.webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Hritik Bansal</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/_blank_hritik/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/hritik.bansal.1" target="_blank"
+                                        class="facebook"><i class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/hritikbansal/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/nirmal kumar singh.webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Nirmal Kumar Singh</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/the.prodigious.alpha/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/nirmal.kumarsingh.94651" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/mwlite/in/nirmal-kumar-singh-9ba756160" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Sanjana Bansal.jpg" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Sanjana Bansal</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/1127san/" target="_blank" class="instagram"><i
+                                            class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/sanjana2711/" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/sanjana27/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/shivangiMaam (2).jpg" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Shivangi Bhagerwal</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/shivangib_7/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/shivangi-bagherwal-54b06017a/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/Pankaj Pant.webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Pankaj Pant</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/pankaj_pant__/" target="_blank"
+                                        class="instagram"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.facebook.com/pankaj.pant.104203" target="_blank" class="facebook"><i
+                                            class="fab fa-facebook"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/divyanshu-bhaik-7438a6155/" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="aks col-md-4">
+                        <div class="cards cards--two">
+                            <img src="img/team/SomwithReddy.webp" class="img-responsive" alt="Cards Image">
+                            <span class="cards--two__rect"></span>
+                            <span class="cards--two__tri"></span>
+                            <p>Sowmith Reddy Moola</p>
+                            <ul class="cards__list">
+                                <li><a href="https://www.instagram.com/sow_myth_reddy/" target="_blank" class="instagram"><i
+                                            class="fab fa-instagram"></i></a></li>
+
+                                <li><a href="https://www.linkedin.com/in/sowmith-reddy-moola-75109015a" target="_blank"
+                                        class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <h1 class="alumni-heading">2020</h1>
                 <div class="row">
                     <div class="aks col-md-4">
