--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       <div class="container">
         <div class="social-links">
           <a href="https://www.instagram.com/team_vibhav/" target="_blank" class="instagram"><i
-              class="fab fa-instagram"></i></a>
+              class="fab fa-instagram fa-lg"></i></a>
           <a href="https://www.facebook.com/teamvibhavece" target="_blank" class="facebook"><i
-              class="fab fa-facebook"></i></a>
+              class="fab fa-facebook fa-lg"></i></a>
           <a href="https://www.linkedin.com/company/team-vibhav/" target="_blank" class="linkedin"><i
-              class="fab fa-linkedin"></i></a>
+              class="fab fa-linkedin fa-lg"></i></a>
           <a href="https://youtube.com/channel/UCt8W-_urFuy3dqulfQvk8fQ" target="_blank" class="instagram"><i
-              class="fab fa-youtube"></i></a>
+              class="fab fa-youtube fa-lg"></i></a>
         </div>
       </div>
     </div>
